Add swagger description
