# controllers/transactions.go
@@ -7,6 +7,10 @@ import (
 	"net/http"
 )
 
+type GetPaginatedUsersTransactionsOutput struct {
+	Transactions *[]utils.UserFormattedTransaction `json:"transactions"`
+}
+
 type UserTransactionsInput struct {
 	UserID uint   `json:"user_id" binding:"required"`
 	Limit  uint   `json:"limit" binding:"required"`
@@ -14,6 +18,16 @@ type UserTransactionsInput struct {
 	Sort   string `json:"sort" binding:"required"`
 }
 
+// @Summary GetPaginatedUsersTransactions
+// @Description Method allows to get user's transactions info using the pagination, it allows to order transactions by date, money and other transaction's attributes. Limit - maximum of needed transactions, Page - the offset with limit, Sort - value to sort by:date: "timestamp asc" or money: "money_value asc" (also "desc" is available)
+// @ID get-paginated-users-transactions
+// @Tags transactions
+// @Accept json
+// @Produce json
+// @Param input body UserTransactionsInput true "Information to get transactions"
+// @Success 200 {object} GetPaginatedUsersTransactionsOutput
+// @Failure 400 {object} ErrorOutput
+// @Router /user/transactions [get]
 func GetPaginatedUsersTransactions(context *gin.Context) {
 	var input UserTransactionsInput
 	if err := context.ShouldBindJSON(&input); err != nil {
@@ -35,5 +49,5 @@ func GetPaginatedUsersTransactions(context *gin.Context) {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	context.JSON(http.StatusOK, gin.H{"transactions": transactions})
+	context.JSON(http.StatusOK, GetPaginatedUsersTransactionsOutput{Transactions: transactions})
 }
